# s2-modeling-and-simulations

./: .gitignore  CMakeLists.txt  README.md  build.sh  exercise1.cpp
Exercise_1/: CMakeLists.txt
Exercise_1/Scripts/: build.sh  test.sh
Exercise_1/Src/: exercise1.cpp
Exercise_1/Test_Data/: Info.md
exercise1/: CMakeLists.txt
exercise1/scripts/: build.sh  install_dependencies.sh  test.sh
exercise1/src/: exercise1.cpp
exercise2/: CMakeLists.txt
exercise2/scripts/: build.sh  test.sh
exercise2/src/: exercise2.cpp
exercise2/tests/: test1  test2
exercise3/: CMakeLists.txt
exercise3/scripts/: build.sh
exercise3/src/: exercise3.cpp
exercise3/tests/: tester.py  testerChi.py
exercise4/src/: exercise.py
